# OpenCMO

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_es.md  README_ja.md  README_ko.md  README_zh.md  capture_fresh_screenshots.py  docker-compose.yml  pyproject.toml  test.js  test_browser_use.py
.github/workflows/: ci.yml  prod-chat-regression.yml
docs/superpowers/plans/: 2026-04-02-unified-background-task-runtime.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: llms.txt  robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: approvals.ts  blogGen.ts  (+20 more)
src/opencmo/: autopilot.py  cli.py  config.py  context.py  finding_contract.py  finding_verifier.py  graph_expansion.py  insights.py  llm.py  marketing_review.py  monitoring.py  report_pipeline.py  reports.py  scheduler.py  scrape_config.py  service.py  storage.py
tests/: test_agent_prompts.py  test_autopilot_prompts.py  test_background_storage.py  test_background_worker.py  test_blog_writer.py  test_community_providers.py  test_email_report.py  test_finding_verifier.py  test_geo_providers.py  test_growth_checklist.py  test_insights.py  test_llm.py  test_marketing_skills.py  test_monitoring.py  test_prompt_contracts.py  test_publishers.py  test_report_pipeline.py  test_reports.py  test_scheduler.py  test_seo_audit.py  test_seo_copy_clean.py  test_serp_tracker.py  test_service.py  test_smoke.py  test_trend_research.py  test_web.py
video/src/: OpenCMODemo.tsx  Root.tsx
(+224 files in other folders)
